--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-numpy==1.26.4
-scikit-learn==1.3.2
-streamlit==1.29.0
+python=3.11
+numpy==2.1.0
+scikit-learn==1.5.2
+streamlit==1.40.0
 streamlit-option-menu==0.3.6
+
+
